--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,6 @@ edition = "2021"
 [dependencies]
 actix-web = "4.4.0"
 dotenv = "0.15.0"
-env_logger = "0.10.1"
-log = "0.4.20"
 serde = { version = "1.0.193", features = ["derive"] }
 chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
 sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-tokio", "macros"] }
@@ -17,3 +15,6 @@ actix-web-validator = "5.0.1"
 validator = { version = "0.16", features = ["derive"] }
 regex = "1.6.0"
 once_cell = "1.13.0"
+slog = "2.7.0"
+slog-term = "2.9.0"
+slog-async = "2.8.0"
