--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SERVER_PORT=8080
-DATABASE_URL=postgres://postgres:Pass12345@localhost:5432/SMS_GATEWAY
+DATABASE_URL=postgres://postgres:Pass12345@localhost:5432/SMS_GATEWAY_TEST
 MAX_CONNECTIONS=5
