--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.4.0"
-serde = { version = "1.0.193", features = ["derive"] }
+serde = { version = "1.0.195", features = ["derive"] }
 chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
 sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-tokio", "macros"] }
 actix-web-validator = "5.0.1"
@@ -21,3 +21,4 @@ dotenvy = "0.15.7"
 
 [dev-dependencies]
 actix-rt = "2.9.0"
+serde_json = "1.0.111"
