--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,10 @@ slog-term = "2.9.0"
 slog-async = "2.8.0"
 dotenvy = "0.15.7"
 actix-web-httpauth = "0.8.1"
-hmac = "0.12.1"
-jwt = "0.16.0"
-sha2 = "0.10.8"
+jsonwebtoken = {version = "9.2.0", default-features = false }
+# hmac = "0.12.1"
+# jwt = "0.16.0"
+# sha2 = "0.10.8"
 rust-argon2 = "2.1.0"
 rand = "0.8.5"
 
