--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,17 +14,13 @@ actix-web-validator = "5.0.1"
 validator = { version = "0.16", features = ["derive"] }
 regex = "1.6.0"
 once_cell = "1.13.0"
-slog = "2.7.0"
-slog-term = "2.9.0"
-slog-async = "2.8.0"
 dotenvy = "0.15.7"
 actix-web-httpauth = "0.8.1"
 jsonwebtoken = {version = "9.2.0", default-features = false }
-# hmac = "0.12.1"
-# jwt = "0.16.0"
-# sha2 = "0.10.8"
 rust-argon2 = "2.1.0"
 rand = "0.8.5"
+log = "0.4.21"
+log4rs = "1.3.0"
 
 [dev-dependencies]
 actix-rt = "2.9.0"
