--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ rust-argon2 = "2.1.0"
 rand = "0.8.5"
 log = "0.4.21"
 log4rs = "1.3.0"
+askama = "0.12.1"
 
 [dev-dependencies]
 actix-rt = "2.9.0"
